[package]
name = "clams-bin"
version = "0.0.9"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Shell CLIs build with help from clams"
readme = "README.md"
license = "MIT"
keywords = ["shell", "cli"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "lukaspustina/clams-bin", branch = "master" }
codecov = { repository = "lukaspustina/clams-bin", branch = "master", service = "github" }

[[bin]]
name = "mv_files"
path = "src/bin/mv_files.rs"

[[bin]]
name = "pelican_frontmatter"
path = "src/bin/pelican_frontmatter.rs"

[[bin]]
name = "new_note"
path = "src/bin/new_note.rs"

[dependencies]
chrono = "^0.4"
clams = "^0.0.8"
clams-derive = "^0.0.4"
failure = "^0.1"
failure_derive = "^0.1"
handlebars = "^0.32"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
structopt = "^0.2"
toml = "^0.4"
walkdir = "2"

[dev-dependencies]
spectral = "^0.6"
