[package]
name = "clams-bin"
version = "0.0.9"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Shell CLIs build with help from clams"
readme = "README.md"
license = "MIT"
keywords = ["shell", "cli"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[badges]
travis-ci = { repository = "lukaspustina/clams-bin", branch = "master" }
codecov = { repository = "lukaspustina/clams-bin", branch = "master", service = "github" }

[dependencies]
chrono = "^0.4"
clams = "^0.0.15"
failure = "^0.1"
failure_derive = "^0.1"
handlebars = "1"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
netatmo-rs = "0.2"
structopt = "^0.2"
toml = "^0.5"
walkdir = "2"

[dev-dependencies]
spectral = "^0.6"
